--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <img id="enemyImg" src="enemy1.png" style="display:none;">
   <img id="enemy2Img" src="truck2.png" style="display:none;">
   <img id="enemy3Img" src="enemy3.png" style="display:none;">
-  <img id="enemy4Img" src="truck.png" style="display:none;">
+  <img id="enemy4Img" src="truck3.png" style="display:none;">
   <img id="coinImage" src="https://www.pngkey.com/png/full/63-636640_ki-ball-electric-v-blue-energy-ball-png.png" style="display: none;">
   <img id="fireImg" src="https://www.nicepng.com/png/full/129-1293144_graphic-download-electricity-transparent-light-burst-lightning-png.png" style="display:none;">
   <img id="rocketImg" src="pngegg.png" style="display: none;">
@@ -116,8 +116,8 @@
   var enemy4Y = 0;
 
   // Set up the second enemy's size
-  var enemy4Width = 60;
-  var enemy4Height = 130;
+  var enemy4Width = 180;
+  var enemy4Height = 180;
 
   // Set up the second enemy's speed
   var enemy4Speed = 4.3;
