--- a/easy/index.html
+++ b/easy/index.html
@@ -31,8 +31,8 @@
   <img id="enemy2Img" src="truck2.png" style="display:none;">
   <img id="enemy3Img" src="enemy3.png" style="display:none;">
   <img id="enemy4Img" src="truck3.png" style="display:none;">
-  <img id="coinImage" src="https://www.pngkey.com/png/full/63-636640_ki-ball-electric-v-blue-energy-ball-png.png" style="display: none;">
-  <img id="fireImg" src="https://www.nicepng.com/png/full/129-1293144_graphic-download-electricity-transparent-light-burst-lightning-png.png" style="display:none;">
+  <img id="coinImage" src="rocket.png" style="display: none;">
+  <img id="fireImg" src="rocket.png" style="display:none;">
   <img id="rocketImg" src="pngegg.png" style="display: none;">
    <!-- Add an audio element for the point sound -->
    <audio id="pointSound" src="https://assets.mixkit.co/sfx/preview/mixkit-screechy-electified-item-3213.mp3" style="display:none"></audio>
