--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <canvas id="gameCanvas" ></canvas>
 
   <!-- Add image elements for the player and enemy -->
-  <img id="playerImg" src="https://www.cybertruckownersclub.com/forum/attachments/cybertruck-overhead-png.1644/" style="display:none;">
+  <img id="playerImg" src="cybertruck.png" style="display:none;">
   <img id="enemyImg" src="enemy1.png" style="display:none;">
   <img id="enemy2Img" src="truck2.png" style="display:none;">
   <img id="enemy3Img" src="enemy3.png" style="display:none;">
