--- a/easy/index.html
+++ b/easy/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
   body {
-    background-image: url('https://3.bp.blogspot.com/-DUaiSfM9ra4/UIMDetO6AhI/AAAAAAAADrc/PQVqzOzlYZI/s1600/Tileable+asphalt+road+surface+texture+cracked');
+    background-image: url('road5.jpeg');
     background-size: 15%;
     animation: scroll 400s linear infinite; /* This will make the background image scroll continuously */
 }
@@ -26,7 +26,7 @@
   <canvas id="gameCanvas" ></canvas>
 
   <!-- Add image elements for the player and enemy -->
-  <img id="playerImg" src="https://www.cybertruckownersclub.com/forum/attachments/cybertruck-overhead-png.1644/" style="display:none;">
+  <img id="playerImg" src="cybertruck.png" style="display:none;">
   <img id="enemyImg" src="enemy1.png" style="display:none;">
   <img id="enemy2Img" src="truck2.png" style="display:none;">
   <img id="enemy3Img" src="enemy3.png" style="display:none;">
