--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
   body {
-    background-image: url('https://3.bp.blogspot.com/-DUaiSfM9ra4/UIMDetO6AhI/AAAAAAAADrc/PQVqzOzlYZI/s1600/Tileable+asphalt+road+surface+texture+cracked');
+    background-image: url('road5.jpeg');
     background-size: 15%;
     animation: scroll 400s linear infinite; /* This will make the background image scroll continuously */
 }
