--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>cyber rush</title>
   <!-- Add the viewport meta tag to set the canvas to the full screen size -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1920, initial-scale=1.0">
 </head>
 <style>
   body {
