--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     background-image: url('road5.jpeg');
     background-size: 15%;
     animation: scroll 400s linear infinite; /* This will make the background image scroll continuously */
+    width: 1920px;
 }
 
 @keyframes scroll {
