--- a/easy/index.html
+++ b/easy/index.html
@@ -7,10 +7,24 @@
 </head>
 <style>
   body {
+    background-color: black;
+    margin: auto;
+    display: block;
+       
+}
+canvas {
     background-image: url('road5.jpeg');
     background-size: 15%;
+    margin: auto;
+    display: block;
     animation: scroll 400s linear infinite; /* This will make the background image scroll continuously */
-}
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
 
 @keyframes scroll {
   /* The keyframes for the scroll animation */
