--- a/easy/index.html
+++ b/easy/index.html
@@ -59,12 +59,12 @@ canvas {
     
   // Initialize the canvas element and context
   var counter = 0;
-  var windowWidth = 1881;
-  var windowHeight = 1058;
+  var windowWidth = 1920;
+  var windowHeight = 1080;
   var canvas = document.getElementById("gameCanvas");
   var ctx = canvas.getContext("2d");
-  document.getElementById("gameCanvas").width = windowWidth * 0.98;
-  document.getElementById("gameCanvas").height = windowHeight * 0.98;
+  document.getElementById("gameCanvas").width = windowWidth;
+  document.getElementById("gameCanvas").height = windowHeight;
     // Set up the player's rocket variables
   var rocketFired = false;
   var rocketX = playerX + playerWidth / 3.3;
